# woa-classfication

./: Cargo.toml  LICENSE  README.md  makefile
memoria/: memoria.aux  memoria.blg  memoria.fdb_latexmk  memoria.fls  memoria.out  memoria.tex  memoria.toc  refs.bib
memoria/tables/: woa-ls_10.tex  woa-ls_20.tex  woa-pool_10.tex  woa-pool_20.tex  woa-shake_10.tex  woa-shake_20.tex  woa_10.tex  woa_10.tex.aux  woa_20.tex  woa_20.tex.aux
presentacion/: presentacion.aux  presentacion.fdb_latexmk  presentacion.fls  presentacion.nav  presentacion.out  presentacion.snm  presentacion.tex  presentacion.toc
src/: main.rs
src/common/: mod.rs
src/input_parsing/: mod.rs
src/woa/: algorithm.rs  mod.rs  soft_ls.rs
