[package]
name = "woa-classification"
version = "0.1.0"
authors = ["Yabir G. <yabirg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0.51"
serde = {version = "1.0.106", features=["derive"]}
[profile.release]
opt-level=2
